--- a/main.kv
+++ b/main.kv
@@ -11,16 +11,18 @@
 
 #:set Dock_y0 160
 
+# Main class for gui
 AnchorLayout:
     ScreenManager:
         id: sm
         Gauge4Screen:
             name: "gauge4"
             FloatLayout:
+                # Black background image for better visibility
                 Image:
                     source: "data/wallpapers/1024x600-black-solid-color-background.png"
 
-                # Existing labels for speed and RPM
+                # Text labels for Speed in MPH and RPM
                 Label:
                     text: str(math.floor(app.Speed))
                     font_size: 80
@@ -42,8 +44,9 @@ AnchorLayout:
                     pos: -150, -200  # Close to RPM label
                     font_name: GaugeFont
 
-                # Shift Warning 
+                # Shift Warning Text
                 Label:
+                    # Logic based on the Mazda redline 
                     text: 'OK' if len(str(app.RPM)) < 4 else ('SHIFT' if str(app.RPM)[:2] == '55' or str(app.RPM)[:2] == '56' or str(app.RPM)[:2] == '57' or str(app.RPM)[:2] == '58' or str(app.RPM)[:2] == '59' or str(app.RPM)[:1] == '6' else 'READY' if str(app.RPM)[:1] == '5' else 'OK')
                     font_size: 250
                     color: [0, 1, 0, 1] if len(str(app.RPM)) < 4 else ([1, 0, 0, 1] if str(app.RPM)[:2] == '55' or str(app.RPM)[:2] == '56' or str(app.RPM)[:2] == '57' or str(app.RPM)[:2] == '58' or str(app.RPM)[:2] == '59' or str(app.RPM)[:1] == '6' else [1, 1, 0, 1] if str(app.RPM)[:1] == '5' else [0, 1, 0, 1])
@@ -53,6 +56,7 @@ AnchorLayout:
                     pos: 362, 300  
                     font_name: GaugeFont
 
+    # General initialization for OBD2 Data
     AnchorLayout:
         anchor_x: 'left'
         anchor_y: 'bottom'
